<resources>
	<string name="app_name">「如意彩」</string>
	<string name="shuangseqiu">双色球</string>
	<string name="fucai3d">福彩3D</string>
	<string name="qilecai">七乐彩</string>
	<string name="daletou">超级大乐透</string>
	<string name="pailie3">排列三</string>
	<string name="backtohomepage">返回大厅</string>
	<string name="returnlastpage">返回上一页</string>
	<string name="quit">退出</string>
	<string name="quit_title">确定要离开？</string>
	<string name="quit_message">您确定要离开如意彩</string>
	<string name="login_register">登录/注册</string>
	<string name="logout">注销</string>
	<string name="welcome">欢迎使用</string>
	<string name="login">登" "录</string>
	<string name="switchtxt">切" "换</string>
	<string name="cancel">取" "消</string>
	<string name="str_return">返回</string>
	<string name="kaijianggonggao">开奖</string>
	<string name="goucaitouzhu">购彩</string>
	<string name="zhanghuchongzhi">充值</string>
	<string name="zhuanjiafenxi">专家荐号</string>
	<string name="ruyizhushou">如意助手</string>
	<string name="bangzhuzhongxin">帮助中心</string>
	<string name="xitongshezhi">系统设置</string>
	<string name="ruyitaocan">如意套餐</string>
	<string name="xingyunxuanhao">幸运选号</string>
	<string name="ruyichuangqing">如意传情</string>
	<string name="yonghuzhongxin">用户中心</string>
	<string name="tesetouzhu">特色投注</string>
	<string name="chaxunxinxi">查询信息</string>
	<string name="zhanghuguanli">账户管理</string>
	<string name="gongsijianjie">公司简介</string>
	<string name="yonghufankui">用户反馈</string>
	<string name="gengduo">更多</string>
	<string name="danshi">单式</string>
	<string name="fushi">复式</string>
	<string name="dantuo">胆拖</string>
	<string name="twoin12">12选2</string>
	<string name="jixuan">机选</string>
	<string name="touzhu">投注</string>
	<string name="zhixuan">直选</string>
	<string name="zuxuan3">组3</string>
	<string name="zuxuan6">组6</string>
	<string name="hezhi">和值</string>
	<string name="zu6">单/复式</string>
	<string name="danma">胆码(1~2)</string>
	<string name="tuoma">拖码(1~9)</string>
	<string name="baiwei">百位</string>
	<string name="shiwei">十位</string>
	<string name="gewei">个位</string>
	<string name="hezhi_zhixuan">和值-直选</string>
	<string name="hezhi_zu3">和值-组3</string>
	<string name="hezhi_zu6">和值-组6</string>
	<string name="choose_zhixuan_title">请选择小球个数</string>
	<string name="zhixuan_danshi_dialog_tips">当前玩法为直选单式</string>
	<string name="zhixuan_fushi_dialog_tips">当前玩法为直选复式</string>
	<string name="zu3_fushi_dialog_tips">当前玩法为组3复式</string>
	<string name="zu6_danshi_dialog_tips">当前玩法为组6单式</string>
	<string name="zu6_fushi_dialog_tips">当前玩法为组6复式</string>
	<string name="zhixuanhezhi_dialog_tips">当前玩法为和值直选</string>
	<string name="zu3hezhi_dialog_tips">当前玩法为和值组3</string>
	<string name="zu6hezhi_dialog_tips">当前玩法为和值组6</string>
	<string name="dantuo_danma_dialog_tips">请选择1~2位胆码</string>
	<string name="dantuo_tuoma_dialog_tips">请选择1~9位拖码</string>
	<string name="dantuo_dialog_tips">胆码和拖码的小球不少于3个</string>
	<string name="please_choose_number">请选择投注号码</string>
	<string name="please_choose_red_number">请选择红球号码</string>
	<string name="please_choose_blue_number">请选择蓝球号码</string>
	<string name="red_ball_field">红球区</string>
	<string name="blue_ball_field">蓝球区</string>
	<string name="red_ball_danma">红球胆码区(请选择1-5个号码)</string>
	<string name="red_ball_tuoma">红色拖码区(请选择2-20个号码)</string>
	<string name="table_ball_danma">胆码区(请选择1-6个号码)</string>
	<string name="table_ball_tuoma">拖码区</string>
	<string name="dlt_zhuijia_text">追加投注</string>
	<string name="front_field">前区</string>
	<string name="rear_field">后区</string>
	<string name="dlt_zhixuan_front_edit_text">点击选取前区小球</string>
	<string name="dlt_zhixuan_rear_edit_text">点击选取后区小球</string>
	<string name="front_ball_danma">前区胆码</string>
	<string name="front_ball_tuoma">前区拖码</string>
	<string name="rear_ball_danma">后区胆码</string>
	<string name="rear_ball_tuoma">后区拖码</string>
	<string name="please_choose_red_number_dlt">请选择前区号码</string>
	<string name="please_choose_blue_number_dlt">请选择后区号码</string>
	<string name="zi_xuanzedezhuma">注码</string>
	<string name="dlt_zhixuan">大乐透直选</string>
	<string name="dlt_zhixuan_jixuan">大乐透直选机选</string>
	<string name="dlt_dantuo">大乐透胆拖</string>
	<string name="dlt_dantuo_jixuan">大乐透胆托机选</string>
	<string name="dlt_12xuan2">大乐透12选2</string>
	<string name="dlt_12xuan2_jixuan">大乐透12选2机选</string>
	<string name="dlt_jixuanzhushu">注数：</string>
	<string name="dlt12xuan2jixuanzhushu">12选2机选注数</string>
	<string name="plesechosejixuanzhushu">请选择机选注数</string>
	<string name="dltzhixuanjixuanzhushu">大乐透直选机选注数</string>
	<string name="dlt_dantuo_tishi">已处于胆托投注页面</string>
	<string name="dltdayu10w">单张彩票基本投注的最大投注金额不超过20000元，基本投注加追加投注的最大投注金额不超过30000元。
	</string>
	<string name="sscmax10w">单笔投注不能大于100000元</string>
	<string name="dlt_toast_front_danma_title">选号重复，前区拖码被覆盖！</string>
	<string name="dlt_toast_front_tuoma_title">选号重复，前区胆码被覆盖！</string>
	<string name="dlt_toast_rear_danma_title">选号重复，后区胆码被覆盖！</string>
	<string name="dlt_toast_rear_tuoma_title">选号重复，后区拖码被覆盖！</string>
	<string name="blue_ball_dantuo">蓝球区(1-16个)</string>
	<string name="toggle_on">" "机选</string>
	<string name="toggle_off">" "自选</string>
	<string name="choose_number_dialog_title_fushi">请选择复式小球个数</string>
	<string name="choose_number_dialog_tip1">当前小球数为单式玩法</string>
	<string name="choose_number_dialog_tip2">当前玩法为红复式</string>
	<string name="choose_number_dialog_tip3">当前玩法为蓝复式</string>
	<string name="choose_number_dialog_tip4">当前玩法为全复式</string>
	<string name="choose_number_dialog_title_dantuo">请选择胆拖小球个数</string>
	<string name="choose_number_dialog_tip5">请选择胆码、拖码</string>
	<string name="choose_number_dialog_tip6">请选择蓝球</string>
	<string name="choose_number_dialog_tip7">当前玩法为单式</string>
	<string name="choose_number_dialog_tip8">当前玩法为复式</string>
	<string name="choose_number_dialog_tip9">请选择前区胆码、拖码和后区胆码、拖码</string>
	<string name="choose_number_dialog_tip10">请选择前区胆码、拖码</string>
	<string name="choose_number_dialog_tip11">请选择后区胆码、拖码</string>
	<string name="choose_number_dialog_tip2_dlt">当前玩法为前区复式</string>
	<string name="choose_number_dialog_tip3_dlt">当前玩法为后区复式</string>
	<string name="choose_number_dialog_tip4_dlt">当前玩法为全复式</string>
	<string name="zhuijia_touzhu">" "追加投注</string>
	<string name="meiqibeishu">倍</string>
	<string name="zhuihaoqishu">期</string>
	<string name="zuida50bei">（最大50倍）</string>
	<string name="zuida99bei">（最大99倍）</string>
	<string name="zuiduo99qi">（最多99期）</string>
	<string name="please_input_red_ball_num">请选择红球个数：</string>
	<string name="please_input_blue_ball_num">请选择蓝球个数：</string>
	<string name="user_login">用户登录</string>
	<string name="login_find_password">
		<u>找回登录密码</u>
	</string>
	<string name="login_phoneNumber">手机号:</string>
	<string name="login_password">密" "码:</string>
	<string name="loginTitle">请登录</string>
	<string name="login_dialog_ok">确定</string>
	<string name="login_dialog_cancel">取消</string>
	<string name="remember_phoneNum">记住手机号</string>
	<string name="remember_password">记住密码</string>
	<string name="regNewUser">注" "册</string>
	<string name="please_enter_phone_number">请输入手机号</string>
	<string name="please_enter_phone_password">请输入密码</string>
	<string name="please_enter_phone_password_two">重新输入密码</string>
	<string name="please_enter_name">请输入您的真实姓名</string>
	<string name="please_enter_id">请输入您的身份证号码</string>
	<string name="please_enter_card_num">请输入如意卡号</string>
	<string name="please_enter_card_password">请输入卡密码</string>
	<string name="please_remember_pwd">请输入密码</string>
	<string name="reg_new_user">注" "册</string>
	<string name="forget_password">忘记密码</string>
	<string name="register">注" "册</string>
	<string name="register_login_phoneNumber">手机号:</string>
	<string name="register_login_password">密 码:</string>
	<string name="register_login_name">真实姓名:</string>
	<string name="register_confirm_password">确认 密码:</string>
	<string name="register_id_num">身份证号码:</string>
	<string name="register_id_card">如意彩票卡:</string>
	<string name="register_id_card_password">卡密码:</string>
	<string name="register_refer_info_1">如意彩服务协议请参阅</string>
	<string name="register_refer_info_2">http://www.ruyicai.com/ruyicai/web/help/xieyi.jsp
	</string>
	<string name="giveCall">立即拨打</string>
	<string name="return_button">返回</string>
	<string name="forget_password_hint">请您拨打客服电话，客服人员会帮您找回密码，点击”立即拨打“会自动语音连线，
		客服电话：400-665-1000</string>
	<string name="register_free_info">手机号码、真实姓名和身份证号码是彩票兑奖的重要依据，为保障您的合法权益，建议您注册时绑定身份证信息！
	</string>
	<string name="no_connection">连接失败！</string>
	<string name="no_connection_title">连接失败</string>
	<string name="settings">设置</string>
	<string name="connect_hint">允许应用程序连接网络</string>
	<string name="tishi">提示</string>
	<string name="go_on">继续</string>
	<string name="no_hint">不再提示</string>
	<string name="back_to_login">返回</string>
	<string name="register_return">返回</string>
	<string name="phone_cards_recharge">手机充值卡充值</string>
	<string name="freeHanding">（免手续费）</string>
	<string name="phone_bank_cards_recharge">手机银行充值</string>
	<string name="zhfb_cards_recharge">支付宝充值</string>
	<string name="bank_cards_recharge">银行卡电话充值</string>
	<string name="game_cards_recharge">游戏点卡充值</string>
	<string name="other_recharge">其它充值</string>
	<string name="computer_rechargeinfo">使用电脑进行充值,请登录如意彩官网</string>
	<string name="computer_address"> http://www.ruyicai.com</string>
	<string name="phone_card_please_entrCardInfo">请输入充值卡信息：</string>
	<string name="phone_card_enter_CInfo">充值卡序列号：</string>
	<string name="phone_card_CPassword">充值卡密码：</string>
	<string name="phone_card_CValue">请输入充值卡面值：</string>
	<string name="phone_card_hint"> 提示：手机话费充值卡充值收取4%手续费。</string>
	<string name="phone_card_select_recharge_card_type">选择一个充值卡类型</string>
	<string name="phone_card_select_recharge_card_value">选择一个充值卡面值</string>
	<string name="phone_bank_select_bank">请选择银行：</string>
	<string name="phone_bank_select_dialog_bank">选择银行：</string>
	<string name="phone_bank_enter_value">请输入充值金额（整数）：</string>
	<string name="phone_bank_hint">提示:以上银行充值前需开通网银业务。</string>
	<string name="phone_banke_select_bank_type">选择一种银行卡类型</string>
	<string name="ZFB_please_enter_value">请输入您的充值金额(整数):</string>
	<string name="ZFB_relate_phoneNum">支付宝账号(手机或邮箱): </string>
	<string name="ZFB_hint"> " "提示:"\n" 1.支付前,请您确认您已是支付宝会员,如您还没有支付宝账户,请登录
		www.alipay.com支付宝网站注册"\n"
		2.手机支付宝将通过WAP方式从您的支付宝账户扣款完成支付"\n"
		3.手机支付宝支付金额每日最高500元"\n"
		4.支付宝客服热线：0571-88156688</string>
	<string name="bank_card_phone_enter_rechargeInfo">请输入充值信息：</string>
	<string name="bank_card_phone_recharge_value">充值金额(20元以上整数金额 )：</string>
	<string name="bank_card_phone_yuan">(最低20元)</string>
	<string name="bank_card_phone_recharge_cardNum">充值卡号</string>
	<string name="bank_card_phone_phoneNum">手机号码：</string>
	<string name="bank_card_phone_text_moneny">充值金额：</string>
	<string name="chargehintmoney">60</string>
	<string name="bank_card_phone_import_hint">(确保接听银联电话,请填真实号码)\n提示：\n使用电话银行，账户认证需要一段时间，请耐心等待银联02096585的来电，并按照语音提示操作；中国银联采用卡密分离核心专利技术，彻底保障用户交易安全！\n银联客服热线：400-657-7577
	</string>
	<string name="bank_card_phone_dialog_import_hint">(确保接听银联电话,请填真实号码)\n提示：\n第一次使用电话银行，账户认证需要一段时间，请耐心等待银联02096585的来电，并按照语音提示操作；中国银联采用卡密分离核心专利技术，彻底保障用户交易安全！\n银联客服热线：400-657-7577
	</string>
	<string name="bank_card_phone_user_name">请输入真实姓名:</string>
	<string name="bank_card_phone_user_idnum">请输入身份证号:</string>
	<string name="bank_card_phone_open_bank">请输入开户银行所在地:</string>
	<string name="bank_card_phone_open_bankuser_address">请输入开户人证件所在地:</string>
	<string name="bank_card_phone_bankid">银行卡号：</string>
	<string name="bank_card_phone_name">开卡人名：</string>
	<string name="bank_card_phone_idcard">身份证号：</string>
	<string name="bank_card_phone_home">户籍地址：</string>
	<string name="bank_card_phone_province">卡开户地：</string>
	<string name="bank_card_phone_city">开户城市：</string>
	<string name="bank_card_phone_num">手机号码：</string>
	<string name="dnabankaddress">(如湖北武汉)</string>
	<string name="bank_card_phone_alert1">(浙江山东天津农行暂停充值,仅支持以上银行的借记卡）
    </string>
	<string name="bank_card_phone_alert2">(山东省青岛市XX街XX路XX号)</string>
	<string name="game_card_type">点卡类型：</string>
	<string name="bank_card_phone_no_rechargeInfo">尊敬的客户，由于银联卡与个人信息的关联性较强，必须完善个人资料才能进行充值。 </string>
</resources>